src/test/ui/impl-trait/multiple-lifetimes/ordinary-bounds-unsuited.nll.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ordinary-bounds-unsuited.rs:18:62
   |
LL | fn upper_bounds<'a, 'b>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'a, 'b>
   |                                                              ^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Ordinary<'b>` captures the lifetime `'b` as defined on the function body at 18:21
  --> $DIR/ordinary-bounds-unsuited.rs:18:21
   |
LL | fn upper_bounds<'a, 'b>(a: Ordinary<'a>, b: Ordinary<'b>) -> impl Trait<'a, 'b>
   |                     ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
